--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 10px;
+}
+
 body {
   background-image: url(./assets/images/geometry2.png);
   background-repeat: repeat;
@@ -9,6 +17,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 2.2rem;
 }
 
 code {
@@ -17,6 +26,6 @@ code {
 }
 
 #root {
-  min-height: 100vh;
-  background: linear-gradient(to bottom, hsla(169, 75%, 69%, 0.25), hsla(229, 52%, 79%, 0.25));
+  min-height: 150vh;
+  background: linear-gradient(to bottom, hsla(220, 100%, 87%, 0.25), hsla(224, 100%, 50%, 0.336));
 }
