--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ code {
 
 #root {
   min-height: 100vh;
-  /* background: linear-gradient(to bottom, hsla(220, 100%, 87%, 0.25), hsla(224, 100%, 50%, 0.336)); */
+  /* background: linear-gradient(to bottom, rgba(106, 110, 234, 0.459), rgba(130, 106, 234, 0.459)); */
 }
 
 a {
@@ -54,4 +54,3 @@ a {
 .active {
   color: #6B6CF2;
 }
-
